--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^18.11.13",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   }
